--- a/testcalculator.html
+++ b/testcalculator.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>ICARUS Power Planner — Solar Panels &amp; Advanced Batteries</title>
+<title>Iris K-Means Clustering</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,29 +23,27 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="advancedcalc_files/libs/clipboard/clipboard.min.js"></script>
-<script src="advancedcalc_files/libs/quarto-html/quarto.js"></script>
-<script src="advancedcalc_files/libs/quarto-html/popper.min.js"></script>
-<script src="advancedcalc_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="advancedcalc_files/libs/quarto-html/anchor.min.js"></script>
-<link href="advancedcalc_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="advancedcalc_files/libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="advancedcalc_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="advancedcalc_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="advancedcalc_files/libs/bootstrap/bootstrap-c0367b04c37547644fece4185067e4a7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="testcalculator_files/libs/clipboard/clipboard.min.js"></script>
+<script src="testcalculator_files/libs/quarto-html/quarto.js"></script>
+<script src="testcalculator_files/libs/quarto-html/popper.min.js"></script>
+<script src="testcalculator_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="testcalculator_files/libs/quarto-html/anchor.min.js"></script>
+<link href="testcalculator_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="testcalculator_files/libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="testcalculator_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="testcalculator_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="testcalculator_files/libs/bootstrap/bootstrap-c0367b04c37547644fece4185067e4a7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
 
 <body class="fullcontent">
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
-<main class="content" id="quarto-document-content">
+<div class="page-layout-custom">  
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">ICARUS Power Planner — Solar Panels &amp; Advanced Batteries</h1>
+<h1 class="title">Iris K-Means Clustering</h1>
 </div>
 
 
@@ -62,158 +60,68 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="cell card bg-light p-2 g-col-24 g-col-lg-7">
-<div class="cell-output-display">
+<div class="panel-grid layout-sidebar ms-md-0 layout-sidebar-left">
+<div class="cell panel-sidebar card bg-light p-2 g-col-24 g-col-lg-7">
+<div class="cell-output-display no-overflow-x">
 <div class="form-group shiny-input-container">
-<label class="control-label" id="n_fridge-label" for="n_fridge">Number of Refrigerators</label>
-<input id="n_fridge" type="number" class="shiny-input-number form-control" value="2" data-update-on="change" min="0" step="1">
-</div>
-</div>
-<div class="cell-output-display">
-<div class="form-group shiny-input-container">
-<label class="control-label" id="n_freezer-label" for="n_freezer">Number of Freezers</label>
-<input id="n_freezer" type="number" class="shiny-input-number form-control" value="10" data-update-on="change" min="0" step="1">
-</div>
-</div>
-<div class="cell-output-display">
-<div class="form-group shiny-input-container">
-<label class="control-label" id="daylight-label" for="daylight">Hours of Daylight (0–24)</label>
-<input id="daylight" type="number" class="shiny-input-number form-control" value="11" data-update-on="change" min="1" max="23" step="0.5">
-</div>
-</div>
-<div class="cell-output-display">
-<span class="help-block">Assumptions: Fridge 500 J/s, Freezer 2,500 J/s, Solar 6,000 J/s, Battery 6,000,000 J &amp; 10,000 J/s.</span>
-</div>
-</div>
-<section id="visualisation" class="level1">
-<h1>Visualisation</h1>
-<div class="cell">
-<div class="cell-output-display">
+<label class="control-label" id="xcol-label" for="xcol">X Variable</label>
 <div>
-<figure class="figure">
-<p><img src="advancedcalc_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
+<select id="xcol" class="shiny-input-select"><option value="Sepal.Length" selected="">Sepal.Length</option>
+<option value="Sepal.Width">Sepal.Width</option>
+<option value="Petal.Length">Petal.Length</option>
+<option value="Petal.Width">Petal.Width</option></select>
+<script type="application/json" data-for="xcol" data-nonempty="">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
 </div>
-</section>
-<section id="calculations" class="level1">
-<h1>Calculations</h1>
-<div class="cell">
+<div class="cell-output-display no-overflow-x">
+<div class="form-group shiny-input-container">
+<label class="control-label" id="ycol-label" for="ycol">Y Variable</label>
+<div>
+<select id="ycol" class="shiny-input-select"><option value="Sepal.Length">Sepal.Length</option>
+<option value="Sepal.Width" selected="">Sepal.Width</option>
+<option value="Petal.Length">Petal.Length</option>
+<option value="Petal.Width">Petal.Width</option></select>
+<script type="application/json" data-for="ycol" data-nonempty="">{"plugins":["selectize-plugin-a11y"]}</script>
+</div>
+</div>
+</div>
 <div class="cell-output-display">
-<pre id="calc_steps" class="shiny-text-output"></pre>
+<div class="form-group shiny-input-container">
+<label class="control-label" id="clusters-label" for="clusters">Cluster count</label>
+<input id="clusters" type="number" class="shiny-input-number form-control" value="3" data-update-on="change" min="1" max="9">
+</div>
+</div>
+</div>
+<div class="panel-fill panel-grid g-col-24 g-col-lg-17 pt-3 pt-lg-0">
+<div class="g-col-24">
+<div class="cell panel-fill">
+<div class="cell-output-display">
+<div class="shiny-plot-output html-fill-item" id="plot1" style="width:100%;height:400px;"></div>
+</div>
+</div>
+</div>
 </div>
 </div>
 <p>
-<script type="application/shiny-prerendered" data-context="server-start">
-library(shiny)
-library(ggplot2)
-library(readr)
-
-# ---------------- Constants (ICARUS) ----------------
-FRIDGE_P   <- 500      # J/s per refrigerator
-FREEZER_P  <- 2500     # J/s per freezer
-PANEL_P    <- 6000     # J/s per solar panel
-BAT_CAP    <- 6000000  # J per advanced battery rack
-BAT_RATE   <- 10000    # J/s per advanced battery rack
-
-# Time mapping: 24 in-game hours = 70 real minutes
-IG_24H_MIN <- 70
-IG_24H_SEC <- 70 * 60
-SEC_PER_IG_HR <- IG_24H_SEC / 24
-
-calc_requirements <- function(n_fridge, n_freezer, daylight_hours) {
-  # clamp daylight to (0,24) to avoid divide-by-zero
-  dh <- max(0.01, min(23.99, daylight_hours))
-
-  # total continuous load
-  P <- n_fridge * FRIDGE_P + n_freezer * FREEZER_P
-
-  # durations (real seconds)
-  day_s   <- dh * SEC_PER_IG_HR
-  night_s <- (24 - dh) * SEC_PER_IG_HR
-
-  # Solar: must satisfy instantaneous AND energy balance over 24h
-  panels_instant <- ceiling(P / PANEL_P)
-  panels_energy  <- ceiling(P * 24 / (PANEL_P * dh))
-  panels_needed  <- max(panels_instant, panels_energy)
-
-  print(P)
-  print(PANEL_P)
-  print(panels_energy)
-  print(panels_needed)
-  print(n_fridge)
-  print(n_freezer)
-  
-  # Batteries: capacity for night + discharge rate at night load
-  night_energy       <- P * night_s
-  bat_capacity_need  <- ceiling(night_energy / BAT_CAP)
-  bat_rate_need      <- ceiling(P / BAT_RATE)
-  batteries_needed   <- max(bat_capacity_need, bat_rate_need)
-
-  list(
-    P = P,
-    day_s = day_s,
-    night_s = night_s,
-    night_energy = night_energy,
-    panels_instant = panels_instant,
-    panels_energy = panels_energy,
-    panels_needed = panels_needed,
-    bat_capacity_needed = bat_capacity_need,
-    bat_rate_needed = bat_rate_need,
-    batteries_needed = batteries_needed,
-    daylight = dh
-  )
-}
-</script>
- 
 <script type="application/shiny-prerendered" data-context="server">
-tab <- "   "
+selectedData <- reactive({
+    iris[, c(input$xcol, input$ycol)]
+  })
 
-# Parse user text inputs -> numeric (with basic clamping)
-vals <- reactive({
-  list(
-    n_fridge = input$n_fridge,
-    n_freezer = input$n_freezer,
-    daylight = input$daylight
-  )
+clusters <- reactive({
+  kmeans(selectedData(), input$clusters)
 })
 
-# Run the calculations to get the values
-req_reactive <- reactive({
-    v <- vals()
-    calc_requirements(v$n_fridge, v$n_freezer, v$daylight)
-})
+output$plot1 <- renderPlot({
+  palette(c("#E41A1C", "#377EB8", "#4DAF4A", "#984EA3",
+    "#FF7F00", "#FFFF33", "#A65628", "#F781BF", "#999999"))
 
-# Display the calculation steps
-output$calc_steps <- renderText({
-
-  v <- vals()
-  r <- req_reactive()
-  
-  paste0(
-  "Given inputs:\n",
-  tab, "Refrigerators: ", v$n_fridge, "\n",
-  tab, "Freezers:      ", v$n_freezer, "\n",
-  tab, "Daylight:      ", v$daylight, " in-game hours (",
-  round(input$daylight * SEC_PER_IG_HR, 0),  " real seconds)\n",
-  "\n",
-  "1) Load P (J/s):\n",
-  tab, "P = ", FRIDGE_P, " * fridges + ", FREEZER_P, " * freezers\n",
-  tab, r$P, " J/s", " = ", round(FRIDGE_P * v$n_fridge, 0), " + ", round(FREEZER_P, 0) * v$n_freezer, "\n",
-  "\n",
-  "2) Time mapping:\n",
-  tab, "Real seconds per in-game hour = day-cycle length (", IG_24H_MIN, " min) * 60 seconds / 24 hours ≈ ", round(SEC_PER_IG_HR, 0), "s\n",
-  tab, "Real seconds per in-game day  = daylight_hours * ", round(SEC_PER_IG_HR, 0), " = ", round(r$day_s, 0), " s\n",
-  tab, "Real seconds per in-game night = nightime_hours = (24 - daylight_hours) * ", round(SEC_PER_IG_HR, 0), " = ", round(r$night_s, 0), " s\n",
-  "\n",
-  "3) Solar panels needed:\n",
-  tab, "Instantaneous: ceil(P / 6000) = ", r$panels_instant, "\n",
-  tab, "Energy balance over 24h:\n",
-  tab, "Need Np * 6000 * day_s ≥ P * (day_s + night_s) = P * 24 * SEC_PER_IG_HR\n",
-  tab, "Rearranged: Np ≥ P * 24 / (6000 * daylight_hours) = ", r$panels_energy, "\n",
-  tab, "Panels needed = max(instant, energy) = ", r$panels_needed, "\n",
-  "\n")
+  par(mar = c(5.1, 4.1, 0, 1))
+  plot(selectedData(),
+       col = clusters()$cluster,
+       pch = 20, cex = 3)
+  points(clusters()$centers, pch = 4, cex = 4, lwd = 4)
 })
 </script>
  
@@ -246,18 +154,16 @@ ojs_define <- function(..., .session = shiny::getDefaultReactiveDomain()) {
 </p>
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="dependencies">
-{"type":"list","attributes":{},"value":[]}
+{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","version","src","meta","script","stylesheet","head","attachment","package","all_files","pkgVersion"]},"class":{"type":"character","attributes":{},"value":["html_dependency"]}},"value":[{"type":"character","attributes":{},"value":["selectize"]},{"type":"character","attributes":{},"value":["0.15.2"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["file"]}},"value":[{"type":"character","attributes":{},"value":["www/shared/selectize"]}]},{"type":"NULL"},{"type":"character","attributes":{},"value":["js/selectize.min.js","accessibility/js/selectize-plugin-a11y.min.js"]},{"type":"character","attributes":{},"value":["css/selectize.bootstrap3.css"]},{"type":"NULL"},{"type":"NULL"},{"type":"character","attributes":{},"value":["shiny"]},{"type":"logical","attributes":{},"value":[true]},{"type":"character","attributes":{},"value":["1.11.1"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","version","src","meta","script","stylesheet","head","attachment","package","all_files","pkgVersion"]},"class":{"type":"character","attributes":{},"value":["html_dependency"]}},"value":[{"type":"character","attributes":{},"value":["selectize"]},{"type":"character","attributes":{},"value":["0.15.2"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["file"]}},"value":[{"type":"character","attributes":{},"value":["www/shared/selectize"]}]},{"type":"NULL"},{"type":"character","attributes":{},"value":["js/selectize.min.js","accessibility/js/selectize-plugin-a11y.min.js"]},{"type":"character","attributes":{},"value":["css/selectize.bootstrap3.css"]},{"type":"NULL"},{"type":"NULL"},{"type":"character","attributes":{},"value":["shiny"]},{"type":"logical","attributes":{},"value":[true]},{"type":"character","attributes":{},"value":["1.11.1"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","version","src","meta","script","stylesheet","head","attachment","package","all_files","pkgVersion"]},"class":{"type":"character","attributes":{},"value":["html_dependency"]}},"value":[{"type":"character","attributes":{},"value":["htmltools-fill"]},{"type":"character","attributes":{},"value":["0.5.8.1"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["file"]}},"value":[{"type":"character","attributes":{},"value":["fill"]}]},{"type":"NULL"},{"type":"NULL"},{"type":"character","attributes":{},"value":["fill.css"]},{"type":"NULL"},{"type":"NULL"},{"type":"character","attributes":{},"value":["htmltools"]},{"type":"logical","attributes":{},"value":[true]},{"type":"character","attributes":{},"value":["0.5.8.1"]}]}]}
 </script>
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]}},"value":[{"type":"character","attributes":{},"value":["base","cli","compiler","datasets","digest","dplyr","evaluate","farver","fastmap","generics","ggplot2","glue","graphics","grDevices","grid","gtable","hms","htmltools","httpuv","jsonlite","knitr","labeling","later","lifecycle","magrittr","methods","mime","pillar","pkgconfig","promises","R6","RColorBrewer","Rcpp","readr","rlang","rmarkdown","rstudioapi","scales","shiny","stats","tibble","tidyselect","tools","tzdb","utils","vctrs","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["4.5.1","3.6.5","4.5.1","4.5.1","0.6.37","1.1.4","1.0.4","2.1.2","1.2.0","0.1.4","3.5.2","1.8.0","4.5.1","4.5.1","4.5.1","0.3.6","1.1.3","0.5.8.1","1.6.16","2.0.0","1.50","0.4.3","1.4.2","1.0.4","2.0.3","4.5.1","0.13","1.11.0","2.0.3","1.3.3","2.6.1","1.1-3","1.1.0","2.1.5","1.1.6","2.29","0.17.1","1.4.0","1.11.1","4.5.1","3.3.0","1.2.1","4.5.1","0.5.0","4.5.1","0.6.5","3.0.2","0.52","1.8-4","2.3.10"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36]}},"value":[{"type":"character","attributes":{},"value":["base","bslib","cachem","cli","compiler","datasets","digest","evaluate","fastmap","graphics","grDevices","htmltools","httpuv","jquerylib","jsonlite","knitr","later","lifecycle","magrittr","memoise","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rstudioapi","sass","shiny","stats","tools","utils","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["4.5.1","0.9.0","1.1.0","3.6.5","4.5.1","4.5.1","0.6.37","1.0.4","1.2.0","4.5.1","4.5.1","0.5.8.1","1.6.16","0.1.4","2.0.0","1.50","1.4.2","1.0.4","2.0.3","2.0.1","4.5.1","0.13","1.3.3","2.6.1","1.1.0","1.1.6","2.29","0.17.1","0.4.10","1.11.1","4.5.1","4.5.1","4.5.1","0.52","1.8-4","2.3.10"]}]}]}
 </script>
 <!--/html_preserve-->
-</section>
 
-</main>
-<!-- /main column -->
+
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
@@ -675,7 +581,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
-</div> <!-- /content -->
+</div> <!-- /container fluid -->
 
 
 
